Finishing route sorting
- also managed some errors
